--- a/templates/tasks/index.html
+++ b/templates/tasks/index.html
@@ -20,6 +20,7 @@
             <ul>
                 {% if request.user.is_authenticated %}
                     <li><a href="{% url 'logout' %}">خروج</a></li>
+                    <li><a href="{% url 'profile' %}">پروفایل</a></li>
                 {% else %}  
                     <li><a href="{% url 'login' %}">ورود</a></li>
                     <li><a href="{% url 'sign_up' %}">ثبت نام</a></li>
