--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -2,13 +2,15 @@
 
 {% block content %}
     <section>
-        <div class="container">
+        <div class="container my-2">
             <ul>
-                <li>{{ user.username }}</li>
-                <li>{{ user.get_full_name }}</li>
-                <li>{{ user.email }}</li>
+                <li>نام کاربری: <span>{{ user.username }}</span></li>
+                <li>اسم کامل(در صورت ثبت): <span>{{ user.get_full_name }}</span></li>
+                <li>ایمیل: <span>{{ user.email }}</span></li>
+                <li>تعداد کار های ثبت شده: <span>{{ count_tasks }}</span></li>
+                <li>تعداد کار های انجام نشده: <span>{{ count_active }}</span></li>
             </ul>
-            <a href="{% url 'password_change' %}">تغییر گذرواژه</a>
+            <a class="btn btn-primary" href="{% url 'password_change' %}">تغییر گذرواژه</a>
         </div>
     </section>
 {% endblock content %}
