Add ajax to project for add, update and delete

--- a/templates/tasks/home.html
+++ b/templates/tasks/home.html
@@ -7,13 +7,13 @@
                 {% if request.user.is_authenticated %}
                     <div class="my-3 task_form">
                         <h2>ثبت وظایف روزانه</h2>
-                        <form method="post" action="">
+                        <form method="post" id="task-form" data-url="{% url 'task:taskajax' %}">
                             {% csrf_token %}
                             <input type="text" name=title placeholder="عنوان کار ...">
-                            <button type="submit">ثبت</button>
+                            <button id="task-button" type="submit">ثبت</button>
                         </form>
                     </div>
-                    <table>
+                    <table id="tasklist">
                         <tr>
                             <th>ردیف</th>
                             <th>عنوان</th>
@@ -29,25 +29,25 @@
                                         <td>{{ task.title }}</td>
                                         <td>
                                             {% if task.active %}
-                                            <span class="badge bg-success text-light">فعال</span> 
+                                                <span class="badge bg-success text-light">فعال</span> 
                                             {% else %}
                                                 <span class="badge bg-warning">غیرفعال</span> 
                                             {% endif %}
                                         </td>
                                         <td>{{ task.created }}</td>
                                         <td>
-                                            <form method="post" action="{% url 'task:active_task' id=task.id %}">
+                                            <form method="post" id="update-from" data-url="{% url 'task:active_task' id=task.id %}" data-id="{{ task.id }}">
                                                 {% csrf_token %}
-                                                {% if task.active %}
-                                                    <input type="hidden" name="active">
-                                                    <button type="submit" class="active_button">غیرفعال کردن</button> 
-                                                {% else %}
-                                                    <input type="hidden" name="active">
-                                                    <button type="submit" class="not_active_button">فعال کردن</button>  
-                                                {% endif %}
+                                                <input type="hidden" id="input_active" name="task_id" value="{{ task.id }}">
+                                                <button type="submit" id="update-button" class="not_active_button">غیرفعال کردن</button>  
                                             </form>
                                         </td>
-                                        <td><a href="{% url 'task:delete_task' id=task.id %}"><button class="delete_button">حذف کردن</button></a></td>
+                                        <td>
+                                            <form method="post" id="delete_form" data-url="{% url 'task:delete_task' id=task.id %}" data-id="{{ task.id }}">
+                                                {% csrf_token %}
+                                                <button type="submit" id="delete_button" class="delete_button">حذف کردن</button>
+                                            </form>
+                                        </td>
                                 </tr>
                             {% else %}
                                 <tr class="back_dark">
@@ -55,25 +55,25 @@
                                     <td>{{ task.title }}</td>
                                     <td>
                                         {% if task.active %}
-                                        <span class="badge bg-success text-light">فعال</span> 
+                                            <span class="badge bg-success text-light">فعال</span> 
                                         {% else %}
                                             <span class="badge bg-warning">غیرفعال</span> 
                                         {% endif %}
                                     </td>
                                     <td>{{ task.created }}</td>
                                     <td>
-                                        <form method="post" action="{% url 'task:active_task' id=task.id %}">
+                                        <form method="post" id="update-from" data-url="{% url 'task:active_task' id=task.id %}" data-id="{{ task.id }}">
                                             {% csrf_token %}
-                                            {% if task.active %}
-                                                <input type="hidden" name="active">
-                                                <button type="submit" class="active_button">غیرفعال کردن</button> 
-                                            {% else %}
-                                                <input type="hidden" name="active">
-                                                <button type="submit" class="not_active_button">فعال کردن</button>  
-                                            {% endif %}
+                                            <input type="hidden" id="input_active" name="task_id" value="{{ task.id }}">
+                                            <button type="submit" id="update-button" class="active_button">فعال کردن</button>  
                                         </form>
                                     </td>
-                                    <td><a href="{% url 'task:delete_task' id=task.id %}"><button class="delete_button">حذف کردن</button></a></td>
+                                    <td>
+                                        <form method="post" id="delete_form" data-url="{% url 'task:delete_task' id=task.id %}" data-id="{{ task.id }}">
+                                            {% csrf_token %}
+                                            <button type="submit" id="delete_button" class="delete_button">حذف کردن</button>
+                                        </form>
+                                    </td>
                                 </tr>
                             {% endif %}
                         {% endfor %}
@@ -81,77 +81,7 @@
                 {% else %}
                     <p class="alert alert-warning">برای ثبت کار های روزانه ی خود در سایت ثبت نام کنید.</p><div class="my-3 task_form">
                         <h2>ثبت وظایف روزانه</h2>
-                        <form method="post" action="">
-                            {% csrf_token %}
-                            <input type="text" name=title placeholder="عنوان کار ...">
-                            <button type="submit" disabled>ثبت</button>
-                        </form>
                     </div>
-                    <table>
-                        <tr>
-                            <th>ردیف</th>
-                            <th>عنوان</th>
-                            <th>وضعیت</th>
-                            <th>تاریخ ایجاد</th>
-                            <th></th>
-                            <th></th>
-                        </tr>
-                        {% for task in tasks %}
-                            {% if task.active %}
-                                <tr>
-                                        <td>{{ forloop.counter }}</td>
-                                        <td>{{ task.title }}</td>
-                                        <td>
-                                            {% if task.active %}
-                                            <span class="badge bg-success text-light">فعال</span> 
-                                            {% else %}
-                                                <span class="badge bg-warning">غیرفعال</span> 
-                                            {% endif %}
-                                        </td>
-                                        <td>{{ task.created }}</td>
-                                        <td>
-                                            <form method="post" action="{% url 'task:active_task' id=task.id %}">
-                                                {% csrf_token %}
-                                                {% if task.active %}
-                                                    <input type="hidden" name="active">
-                                                    <button type="submit" class="active_button">غیرفعال کردن</button> 
-                                                {% else %}
-                                                    <input type="hidden" name="active">
-                                                    <button type="submit" class="not_active_button">فعال کردن</button>  
-                                                {% endif %}
-                                            </form>
-                                        </td>
-                                        <td><a href="{% url 'task:delete_task' id=task.id %}"><button class="delete_button">حذف کردن</button></a></td>
-                                </tr>
-                            {% else %}
-                                <tr class="back_dark">
-                                    <td>{{ forloop.counter }}</td>
-                                    <td>{{ task.title }}</td>
-                                    <td>
-                                        {% if task.active %}
-                                        <span class="badge bg-success text-light">فعال</span> 
-                                        {% else %}
-                                            <span class="badge bg-warning">غیرفعال</span> 
-                                        {% endif %}
-                                    </td>
-                                    <td>{{ task.created }}</td>
-                                    <td>
-                                        <form method="post" action="{% url 'task:active_task' id=task.id %}">
-                                            {% csrf_token %}
-                                            {% if task.active %}
-                                                <input type="hidden" name="active">
-                                                <button type="submit" class="active_button">غیرفعال کردن</button> 
-                                            {% else %}
-                                                <input type="hidden" name="active">
-                                                <button type="submit" class="not_active_button">فعال کردن</button>  
-                                            {% endif %}
-                                        </form>
-                                    </td>
-                                    <td><a href="{% url 'task:delete_task' id=task.id %}"><button class="delete_button">حذف کردن</button></a></td>
-                                </tr>
-                            {% endif %}
-                        {% endfor %}
-                    </table>
                 {% endif %}
             </div>
         </section>
