--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,8 +1,8 @@
 {% extends "tasks/index.html" %}
 
 {% block content %}
-    <section>
-        <div class="container">
+    <section class="container">
+        <div class="mt-4 d-flex justify-content-center content text-info row">
             {% if form.errors %}
                 <p>Your username and password didn't match. Please try again.</p>
             {% endif %}
@@ -18,18 +18,18 @@
 
             <form method="post" action="{% url 'login' %}">
                 {% csrf_token %}
-                <div class="row my-2">
-                    <div class="col">
+                <div class="row">
+                    <div class="col-md-5 my-2">
                         <label for="username">نام کاربری:</label>
-                        <input class="form-control" type="text" name='username' id="username">
+                        <input class="input-form" type="text" name='username' id="username">
                     </div> 
-                    <div class="col"> 
+                    <div class="col-md-5 my-2"> 
                         <label for="password">گذرواژه:</label>
-                        <input class="form-control" type="password" name='password'>
+                        <input class="input-form" type="password" name='password'>
                     </div>
                 </div>
 
-                <input type="submit" class="my-2 btn btn-success" value="login">
+                <input type="submit" class="my-2 submit" value="ورود">
                 <input type="hidden" name="next" value="{{ next }}">
             </form>
 
