--- a/templates/tasks/active_form.html
+++ b/templates/tasks/active_form.html
@@ -9,7 +9,7 @@
     </tr>
     {% for task in tasks %}
         {% if task.active %}
-            <tr>
+            <tr id="{{ task.id }}">
                     <td>{{ forloop.counter }}</td>
                     <td>{{ task.title }}</td>
                     <td>
@@ -28,14 +28,11 @@
                         </form>
                     </td>
                     <td>
-                        <form method="post" id="delete_form" data-url="{% url 'task:delete_task' id=task.id %}" data-id="{{ task.id }}">
-                            {% csrf_token %}
-                            <button type="submit" id="delete_button" class="delete_button">حذف کردن</button>
-                        </form>
+                        <a href="{% url 'task:delete_task' id=task.id %}" id="{{ task.id }}" class="delete_button">حذف کردن</a>
                     </td>
             </tr>
         {% else %}
-            <tr class="back_dark">
+            <tr class="back_dark {{ task.id }}">
                 <td>{{ forloop.counter }}</td>
                 <td>{{ task.title }}</td>
                 <td>
@@ -54,12 +51,105 @@
                     </form>
                 </td>
                 <td>
-                    <form method="post" id="delete_form" data-url="{% url 'task:delete_task' id=task.id %}" data-id="{{ task.id }}">
-                        {% csrf_token %}
-                        <button type="submit" id="delete_button" class="delete_button">حذف کردن</button>
-                    </form>
+                    <a href="{% url 'task:delete_task' id=task.id %}" id="{{ task.id }}" class="delete_button">حذف کردن</a>
                 </td>
             </tr>
         {% endif %}
     {% endfor %}
 </table>
+
+<!-- {% block content %}
+        <section>
+            <div class="container my-2">
+                {% if request.user.is_authenticated %}
+                    <div class="my-3 task_form">
+                        <h2>ثبت وظایف روزانه</h2>
+                        <form method="post" id="task-form" data-url="{% url 'task:taskajax' %}">
+                            {% csrf_token %}
+                            <input type="text" name=title placeholder="عنوان کار ...">
+                            <button id="task-button" type="submit">ثبت</button>
+                        </form>
+                    </div>
+                    <table id="tasklist">
+                        <tr>
+                            <th>ردیف</th>
+                            <th>عنوان</th>
+                            <th>وضعیت</th>
+                            <th>تاریخ ایجاد</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                        {% for task in tasks %}
+                            {% if task.active %}
+                                <tr id="{{ task.id }}">
+                                        <td>{{ forloop.counter }}</td>
+                                        <td>{{ task.title }}</td>
+                                        <td>
+                                            {% if task.active %}
+                                                <span class="badge bg-success text-light">فعال</span> 
+                                            {% else %}
+                                                <span class="badge bg-warning">غیرفعال</span> 
+                                            {% endif %}
+                                        </td>
+                                        <td>{{ task.created }}</td>
+                                        <td>
+                                            <form method="post" id="update-from" data-url="{% url 'task:active_task' id=task.id %}" data-id="{{ task.id }}">
+                                                {% csrf_token %}
+                                                <input type="hidden" id="input_active" name="task_id" value="{{ task.id }}">
+                                                <button type="submit" id="update-button" class="not_active_button">غیرفعال کردن</button>  
+                                            </form>
+                                        </td>
+                                        <td>
+                                            <a href="{% url 'task:delete_task' id=task.id %}" id="{{ task.id }}" class="delete_button">حذف کردن</a>
+                                        </td>
+                                </tr>
+                            {% else %}
+                                <tr class="back_dark {{ task.id }}">
+                                    <td>{{ forloop.counter }}</td>
+                                    <td>{{ task.title }}</td>
+                                    <td>
+                                        {% if task.active %}
+                                            <span class="badge bg-success text-light">فعال</span> 
+                                        {% else %}
+                                            <span class="badge bg-warning">غیرفعال</span> 
+                                        {% endif %}
+                                    </td>
+                                    <td>{{ task.created }}</td>
+                                    <td>
+                                        <form method="post" id="update-from" data-url="{% url 'task:active_task' id=task.id %}" data-id="{{ task.id }}">
+                                            {% csrf_token %}
+                                            <input type="hidden" id="input_active" name="task_id" value="{{ task.id }}">
+                                            <button type="submit" id="update-button" class="active_button">فعال کردن</button>  
+                                        </form>
+                                    </td>
+                                    <td>
+                                        <a href="{% url 'task:delete_task' id=task.id %}" id="{{ task.id }}" class="delete_button">حذف کردن</a>
+                                    </td>
+                                </tr>
+                            {% endif %}
+                        {% endfor %}
+                    </table>
+                {% else %}
+                    <p class="alert alert-warning">برای ثبت کار های روزانه ی خود در سایت ثبت نام کنید.</p><div class="my-3 task_form">
+                        <h2>ثبت وظایف روزانه</h2>
+                    </div>
+                {% endif %}
+            </div>
+        </section>
+
+        <script>
+            $(document).ready(function() {
+                $(document).on('click','a.delete_button',function(e){
+                    e.preventDefault()
+                    const id = this.id
+                    const url = this.href
+                    $.ajax({
+                        url:`/delete/${id}`,
+                        data:{},
+                    })
+                    $("#" + id).fadeOut(300)
+                    console.log("deleted!")
+                })
+            });
+        </script>
+{% endblock content %} -->
