--- a/templates/tasks/home.html
+++ b/templates/tasks/home.html
@@ -1,88 +1,34 @@
 {% extends "tasks/index.html" %}
 {% load static %}
 
-    {% block content %}
-        <section>
-            <div class="container my-2">
-                {% if request.user.is_authenticated %}
-                    <div class="my-3 task_form">
-                        <h2>ثبت وظایف روزانه</h2>
-                        <form method="post" id="task-form" data-url="{% url 'task:taskajax' %}">
-                            {% csrf_token %}
-                            <input type="text" name=title placeholder="عنوان کار ...">
-                            <button id="task-button" type="submit">ثبت</button>
-                        </form>
-                    </div>
-                    <table id="tasklist">
-                        <tr>
-                            <th>ردیف</th>
-                            <th>عنوان</th>
-                            <th>وضعیت</th>
-                            <th>تاریخ ایجاد</th>
-                            <th></th>
-                            <th></th>
-                        </tr>
-                        {% for task in tasks %}
-                            {% if task.active %}
-                                <tr>
-                                        <td>{{ forloop.counter }}</td>
-                                        <td>{{ task.title }}</td>
-                                        <td>
-                                            {% if task.active %}
-                                                <span class="badge bg-success text-light">فعال</span> 
-                                            {% else %}
-                                                <span class="badge bg-warning">غیرفعال</span> 
-                                            {% endif %}
-                                        </td>
-                                        <td>{{ task.created }}</td>
-                                        <td>
-                                            <form method="post" id="update-from" data-url="{% url 'task:active_task' id=task.id %}" data-id="{{ task.id }}">
-                                                {% csrf_token %}
-                                                <input type="hidden" id="input_active" name="task_id" value="{{ task.id }}">
-                                                <button type="submit" id="update-button" class="not_active_button">غیرفعال کردن</button>  
-                                            </form>
-                                        </td>
-                                        <td>
-                                            <form method="post" id="delete_form" data-url="{% url 'task:delete_task' id=task.id %}" data-id="{{ task.id }}">
-                                                {% csrf_token %}
-                                                <button type="submit" id="delete_button" class="delete_button">حذف کردن</button>
-                                            </form>
-                                        </td>
-                                </tr>
-                            {% else %}
-                                <tr class="back_dark">
-                                    <td>{{ forloop.counter }}</td>
-                                    <td>{{ task.title }}</td>
-                                    <td>
-                                        {% if task.active %}
-                                            <span class="badge bg-success text-light">فعال</span> 
-                                        {% else %}
-                                            <span class="badge bg-warning">غیرفعال</span> 
-                                        {% endif %}
-                                    </td>
-                                    <td>{{ task.created }}</td>
-                                    <td>
-                                        <form method="post" id="update-from" data-url="{% url 'task:active_task' id=task.id %}" data-id="{{ task.id }}">
-                                            {% csrf_token %}
-                                            <input type="hidden" id="input_active" name="task_id" value="{{ task.id }}">
-                                            <button type="submit" id="update-button" class="active_button">فعال کردن</button>  
-                                        </form>
-                                    </td>
-                                    <td>
-                                        <form method="post" id="delete_form" data-url="{% url 'task:delete_task' id=task.id %}" data-id="{{ task.id }}">
-                                            {% csrf_token %}
-                                            <button type="submit" id="delete_button" class="delete_button">حذف کردن</button>
-                                        </form>
-                                    </td>
-                                </tr>
-                            {% endif %}
-                        {% endfor %}
-                    </table>
-                {% else %}
-                    <p class="alert alert-warning">برای ثبت کار های روزانه ی خود در سایت ثبت نام کنید.</p><div class="my-3 task_form">
-                        <h2>ثبت وظایف روزانه</h2>
-                    </div>
-                {% endif %}
-            </div>
-        </section>
-    {% endblock content %}
+
+{% block content %}
+    <div class="row mt-4 d-flex justify-content-center content">
+        <div class="col-lg-4 col-sm-9 left">
+             <h4 class="ml-2">Django & AJAX</h4>
+             <form class="mt-3" method="POST" id="form" data-url="{% url 'task:taskajax' %}">
+                {% csrf_token %}
+                <input type="text" class="input-form" name=title placeholder="عنوان کار ...">
+                <button id="task-button" class="submit" type="submit">ثبت</button>
+            </form>
+        </div>
+        <div class="col-lg-6 col-sm-9" id="lists">
+        {% for task in tasks %}
+            <div class="card mt-3 card-c" id="{{stud.id}}" style="{% if stud.completed %} text-decoration:line-through;background: linear-gradient(
+            rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)); {% endif %}">
+                <div class="card-body">
+                    <h5 class="heading">{{task.title}} </h5>
+                    <p>{{task.created}}
+                        <span class="float-right">
+                            <a  id="{{task.id}}"  class="btn btn-danger btn_del">X</a>
+                        </span>
+                    </p>
+                </div>
+            </div>    
+        {% endfor %}
+        </div>
+    </div>
+
+{% endblock content %}
+
+
