--- a/templates/tasks/index.html
+++ b/templates/tasks/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="{% static 'tasks/css/main.css' %}">
     <!-- <link rel="stylesheet" href="{% static 'tasks/css/bootstrap.min.css' %}"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Todo App</title>
 </head>
 <body>
     <header>
-        <div class="container nav_head">
+        <div class="container nav_right">
             <ul>
                 <li><a href="{% url 'task:home' %}">خانه</a></li>
             </ul>
         </div>
-        <div class="container nav_login">
+        <div class="container nav_left">
             <ul>
                 {% if request.user.is_authenticated %}
                     <li><a href="{% url 'logout' %}">خروج</a></li>
@@ -37,10 +38,9 @@
     <footer>
         <p>footer</p>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="{% static 'tasks/js/main.js' %}"></script>
 </body>
 </html>
