--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -9,7 +9,7 @@
     </tr>
     {% for task in tasks %}
         {% if task.active %}
-            <tr>
+            <tr id="{{ task.id }}">
                     <td>{{ forloop.counter }}</td>
                     <td>{{ task.title }}</td>
                     <td>
@@ -28,14 +28,11 @@
                         </form>
                     </td>
                     <td>
-                        <form method="post" id="delete_form" data-url="{% url 'task:delete_task' id=task.id %}" data-id="{{ task.id }}">
-                            {% csrf_token %}
-                            <button type="submit" id="delete_button" class="delete_button">حذف کردن</button>
-                        </form>
+                        <a href="{% url 'task:delete_task' id=task.id %}" id="{{ task.id }}" class="delete_button">حذف کردن</a>
                     </td>
             </tr>
         {% else %}
-            <tr class="back_dark">
+            <tr class="back_dark {{ task.id }}">
                 <td>{{ forloop.counter }}</td>
                 <td>{{ task.title }}</td>
                 <td>
@@ -54,10 +51,7 @@
                     </form>
                 </td>
                 <td>
-                    <form method="post" id="delete_form" data-url="{% url 'task:delete_task' id=task.id %}" data-id="{{ task.id }}">
-                        {% csrf_token %}
-                        <button type="submit" id="delete_button" class="delete_button">حذف کردن</button>
-                    </form>
+                    <a href="{% url 'task:delete_task' id=task.id %}" id="{{ task.id }}" class="delete_button">حذف کردن</a>
                 </td>
             </tr>
         {% endif %}
